# pyexec-worker

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/worker/: agent.py  cli.py  job_executor.py  secret_decryptor.py
src/worker/transport/: http_transport.py
worker/: config.py  host_info.py
worker/transport/: ws_transport.py
