[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexec-worker"
version = "0.1.0"
description = "Local execution agent for PyExecutor — run workflow steps on-premises"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    {name = "PyExec", email = "hello@pyexecutor.com"}
]
keywords = ["pyexec", "worker", "agent", "workflow", "on-premises", "local", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "websockets>=11.0",
    "cryptography>=41.0",
    "psutil>=5.9",
    "requests>=2.28",
]

[project.scripts]
pyexec-worker = "worker.cli:main"

[project.urls]
Homepage = "https://pyexecutor.com"
Documentation = "https://docs.pyexecutor.com"
Repository = "https://github.com/pyexecutor/worker"
"Bug Tracker" = "https://github.com/pyexecutor/worker/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["worker*"]
